--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -1,412 +1,15 @@
-$logoColor: #f8f9fa;
-$primaryColor: #d4a373;
-$white: #ffffff;
-$loraFont: 'Lora', serif;
-$robotoFont: 'Roboto', serif;
-$containerWidth: 1300px;
 
-@mixin container {
-    max-width: $containerWidth;
-    width: 100%;
-    margin: 0 auto;
-}
+@import './sass-utils/variables';
+@import './sass-utils/mixins';
 
-@mixin unset {
-    all: unset;
-}
+@import './base/general';
 
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap');
+@import './layouts/header';
+@import './layouts/footer';
 
-html {
-    background-color: #3e3e3e;
-}
+@import './components/article/article';
+@import './components/article/articleCategory';
+@import './components/article/mainArticle';
+@import './components/homepage/homeCategories';
 
-body {
-    margin: 0;
-}
-
-.header {
-    background-color: rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-
-    .header__inner {
-        display: flex;
-        justify-content: space-between;
-        @include container;
-        align-items: center;
-    }
-
-    .header__title {
-        color: $logoColor;
-        font-family: 'League Spartan', serif;
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 22px;
-    }
-
-    .header__nav-list {
-        display: flex;
-    }
-
-    .header__nav-item {
-        list-style: none;
-    }
-
-    .header__nav-item-link {
-        padding: 10px 20px;
-        color: #e5e5e5;
-        text-decoration: none;
-        font-family: $robotoFont;
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 14px;
-
-        &:hover {
-            border-bottom: 1px solid $primaryColor;
-        }
-    }
-}
-
-.main-article {
-    position: relative;
-    width: 100%;
-    height: 600px;
-
-    .main-article__bg {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: -10;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .main-article__inner {
-        color: $white;
-        @include container;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .main-article__heading {
-        max-width: 600px;
-        width: 100%;
-        margin: 15px 0;
-        font-family: $loraFont;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 46px;
-
-    }
-
-    .main-article__content {
-        font-size: 12px;
-        font-family: $loraFont;
-        font-weight: 400;
-        line-height: 20px;
-        max-width: 600px;
-    }
-
-    .main-article__categories {
-        display: flex;
-        padding-left: 0;
-    }
-
-    .main-article__category {
-        list-style: none;
-        margin-left: 20px;
-
-        &:first-child {
-            margin-left: 0;
-        }
-    }
-
-    .main-article__category-link {
-        background-color: rgba(255, 255, 255, 0.15);
-        padding: 5px 10px;
-        border-radius: 8px;
-        font-family: $robotoFont;
-        font-weight: 700;
-        font-size: 10px;
-        line-height: 12px;
-        color: $white;
-        text-decoration: none;
-        transition: 0.15 all;
-
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.15);
-        }
-    }
-
-    .main-article__content {
-        display: flex;
-    }
-
-    .main-article__content-divider {
-        width: 30px;
-        height: 0px;
-        display: block;
-        border: 1px solid #e5e5e5;
-        margin: 7px 10px 0;
-    }
-}
-
-.section {
-    display: flex;
-    background-color: $logoColor;
-    padding: 45px 0;
-
-    .section__inner {
-        @include container;
-    }
-
-    .section__heading {
-        margin-top: 0px;
-        font-family: $loraFont;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 46px;
-    }
-
-    .section__categories {
-        @include unset;
-        display: flex;
-    }
-
-    .section__category {
-        @include unset;
-    }
-
-    .section__category--last {
-        margin-left: auto;
-    }
-
-    .section__category-link {
-        font-family: $loraFont;
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 1.5;
-        color: #495057;
-        margin-right: 20px;
-        text-decoration: none;
-        transition: .5s all;
-
-        &:hover {
-            color: $primaryColor;
-        }
-    }
-
-    .section__category-link--active {
-        color: $primaryColor;
-    }
-}
-
-.articles {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    margin-top: 50px;
-    margin-bottom: 80px;
-}
-
-.article {
-    background-color: $white;
-    border-radius: 5px;
-    overflow: hidden;
-    position: relative;
-}
-
-.article__image-container {
-    position: relative;
-    background-color: #000000;
-}
-
-.article__categories {
-    display: flex;
-    padding-left: 0;
-    position: absolute;
-    right: 20px;
-    z-index: 2;
-}
-
-.article__category {
-    list-style: none;
-    margin-left: 20px;
-
-    &:first-child {
-        margin-left: 0;
-    }
-}
-
-.article__category-link {
-    background-color: rgba(255, 255, 255, 0.15);
-    padding: 5px 10px;
-    border-radius: 8px;
-    font-family: $robotoFont;
-    font-weight: 700;
-    font-size: 10px;
-    line-height: 12px;
-    color: $white;
-    text-decoration: none;
-    transition: 0.15 all;
-
-    &:hover {
-        background-color: rgba(0, 0, 0, 0.15);
-    }
-}
-
-.article__image {
-    width: 100%;
-    opacity: 0.85;
-}
-
-.article__content {
-    border-bottom: 1px solid #e5e5e5;
-    margin: 20px 15px;
-}
-
-.article__content--floating {
-    position: absolute;
-    bottom: 0;
-}
-
-.article__content--bottom-border-hidden {
-    border-bottom: none;
-}
-
-.article__date {
-    font-family: $loraFont;
-    font-weight: 400;
-    font-size: 12px;
-    color: #6c757d;
-}
-
-.article__date--contrast {
-    color: #e5e5e5;
-}
-
-.article__heading {
-    margin-top: 10px;
-    font-family: $loraFont;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.389;
-    color: #495957;
-}
-
-.article__heading--contrast {
-    color: $logoColor;
-}
-
-.article__heading--fixed-width {
-    max-width: 270px;
-}
-
-.article__text {
-    font-family: $loraFont;
-    font-size: 12px;
-    line-height: 1.68;
-    color: #495957;
-}
-
-.article__text--contrast {
-    color: $logoColor;
-}
-
-.article__text--fixed-width {
-    max-width: 350px;
-}
-
-.article__author-container {
-    display: flex;
-    align-items: center;
-    margin: 15px;
-}
-
-.article__author-image {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-right: 20px;
-}
-
-.article__author-heading {
-    @include unset;
-    display: block;
-    font-family: $loraFont;
-    font-size: 12px;
-    font-weight: 700;
-    color: #343a40;
-    margin-bottom: 10px;
-}
-
-.article__author-role {
-    @include unset;
-    display: block;
-    font-family: $loraFont;
-    font-size: 12px;
-    color: #6c757d;
-}
-
-.editors-pick {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: fit-content(350px);
-}
-
-.main-footer {
-    .main-footer__upper {
-        background-color: #212529;
-    }
-
-    .main-footer__upper-inner {
-        @include container;
-        padding: 50px 15px;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 20px;
-    }
-
-    .main-footer__upper-title {
-        font-family: $loraFont;
-        font-size: 18px;
-        line-height: 1.389;
-        font-weight: 700;
-        color: $white;
-        margin: 16px 0;
-    }
-
-    .main-footer__upper-content {
-        color: #e5e5e5;
-        font-family: $loraFont;
-        font-size: 12px;
-        font-weight: 400;
-        margin: 18px 0;
-    }
-
-    .main-footer__bottom {
-        background-color: #343a40;
-        padding: 20px 10px;
-    }
-
-    .main-footer__bottom-inner {
-        @include container;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .main-footer__bottom-text {
-        margin: 0;
-        font-family: $loraFont;
-        font-size: 14px;
-        color: #e5e5e5;
-    }
-}
+@import './view/articleShow';
