--- a/frontend/src/assets/sass/components/article/_article.scss
+++ b/frontend/src/assets/sass/components/article/_article.scss
@@ -4,6 +4,14 @@
     gap: 20px;
     margin-top: 50px;
     margin-bottom: 80px;
+
+    @include for-tablet-down {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include for-phone-only {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .article {
@@ -41,7 +49,7 @@
     border-radius: 8px;
     font-family: $robotoFont;
     font-weight: 700;
-    font-size: 10px;
+    font-size: 0.7rem;
     line-height: 12px;
     color: $white;
     text-decoration: none;
@@ -74,7 +82,7 @@
 .article__date {
     font-family: $loraFont;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 0.875rem;
     color: #6c757d;
 }
 
@@ -82,11 +90,24 @@
     color: #e5e5e5;
 }
 
+.article__heading--link {
+    font-family: $loraFont;
+    font-weight: 700;
+    font-size: 1.3rem;
+    line-height: 1.5;
+    color: #495057;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 .article__heading {
     margin-top: 10px;
     font-family: $loraFont;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.3rem;
     line-height: 1.389;
     color: #495957;
 }
@@ -101,7 +122,7 @@
 
 .article__text {
     font-family: $loraFont;
-    font-size: 12px;
+    font-size: 0.875rem;
     line-height: 1.68;
     color: #495957;
 }
@@ -131,7 +152,7 @@
     @include unset;
     display: block;
     font-family: $loraFont;
-    font-size: 12px;
+    font-size: 0.875rem;
     font-weight: 700;
     color: #343a40;
     margin-bottom: 10px;
@@ -141,7 +162,7 @@
     @include unset;
     display: block;
     font-family: $loraFont;
-    font-size: 12px;
+    font-size: 0.875rem;
     color: #6c757d;
 }
 
