--- a/frontend/src/assets/sass/components/article/_articleCategory.scss
+++ b/frontend/src/assets/sass/components/article/_articleCategory.scss
@@ -24,7 +24,7 @@
     border-radius: 8px;
     font-family: $robotoFont;
     font-weight: 700;
-    font-size: 10px;
+    font-size: 0.7rem;
     line-height: 12px;
     color: $white;
     text-decoration: none;
@@ -45,3 +45,4 @@
         color: #6c757d;
     }
 }
+
