--- a/frontend/src/assets/sass/components/article/_mainArticle.scss
+++ b/frontend/src/assets/sass/components/article/_mainArticle.scss
@@ -17,12 +17,19 @@
 }
 
 .main-article__inner {
-    color: $white;
     @include container;
+    color: $white;
     height: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin: 0 auto;
+
+    @include for-phone-only {
+        align-items: center;
+        text-align: center;
+        padding: 0 15px;
+    }
 }
 
 .main-article__inner--article-show {
@@ -36,18 +43,28 @@
     margin: 15px 0;
     font-family: $loraFont;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 2.5rem;
     line-height: 46px;
 
 }
 
 .main-article__content {
     display: flex;
-    font-size: 12px;
+    font-size: 0.875rem;
     font-family: $loraFont;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 1.3;
     max-width: 600px;
+    display: flex;
+
+    @include for-phone-only {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @include for-large-screen-only {
+        font-size: 1.3rem;
+    }
 }
 
 .main-article__content-divider {
@@ -56,12 +73,16 @@
     display: block;
     border: 1px solid #e5e5e5;
     margin: 7px 10px 0;
+
+    @include for-phone-only {
+        margin: 7px 20px;
+    }
 }
 
 .main-article__author {
     font-family: $loraFont;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 0.875rem;
     line-height: 20px;
     max-width: 600px;
 }
