--- a/frontend/src/assets/sass/sass-utils/_mixins.scss
+++ b/frontend/src/assets/sass/sass-utils/_mixins.scss
@@ -2,8 +2,45 @@
     max-width: $containerWidth;
     width: 100%;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 @mixin unset {
     all: unset;
+}
+
+@mixin for-phone-only {
+    @media only screen and (max-width: 768px) {
+      @content;
+    }
+}
+
+@mixin for-tablet-down {
+    @media only screen and (max-width: 1200px) {
+        @content;
+    }
+}
+
+@mixin for-small-screen-down {
+    @media only screen and (max-width: 1200px) {
+        @content;
+    }
+}
+
+@mixin for-desktop-down {
+    @media only screen and (max-width: 1512px) {
+        @content;
+    }
+}
+
+@mixin for-desktop-up {
+    @media (max-width: 1200px) {
+        @content;
+    }
+}
+
+@mixin for-large-screen-only {
+    @media (min-width: 1512px) {
+        @content;
+    }
 }
