--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -8,6 +8,7 @@
 @import './layouts/footer';
 
 @import './components/article/article';
+@import './components/article/articleAuthor';
 @import './components/article/articleCategory';
 @import './components/article/mainArticle';
 @import './components/homepage/homeCategories';
