--- a/frontend/src/assets/sass/components/article/_mainArticle.scss
+++ b/frontend/src/assets/sass/components/article/_mainArticle.scss
@@ -13,6 +13,7 @@
     img {
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -24,6 +25,7 @@
     justify-content: center;
     flex-direction: column;
     margin: 0 auto;
+    padding: 0 2rem;
 
     @include for-phone-only {
         align-items: center;
