--- a/frontend/src/assets/sass/layouts/_footer.scss
+++ b/frontend/src/assets/sass/layouts/_footer.scss
@@ -1,11 +1,11 @@
-.main-footer {
+.mainFooter {
 }
 
-.main-footer__upper {
+.mainFooter__upper {
     background-color: #212529;
 }
 
-.main-footer__upper-inner {
+.mainFooter__upperInner {
     @include container;
     padding: 50px 15px;
     display: grid;
@@ -21,7 +21,7 @@
     }
 }
 
-.main-footer__upper-title {
+.mainFooter__upperTitle {
     font-family: $loraFont;
     font-size: 1.3rem;
     line-height: 1.389;
@@ -30,7 +30,7 @@
     margin: 16px 0;
 }
 
-.main-footer__upper-content {
+.mainFooter__upperContent {
     color: #e5e5e5;
     font-family: $loraFont;
     font-size: 0.875rem;
@@ -38,18 +38,18 @@
     margin: 18px 0;
 }
 
-.main-footer__bottom {
+.mainFooter__bottom {
     background-color: #343a40;
     padding: 20px 10px;
 }
 
-.main-footer__bottom-inner {
+.mainFooter__bottomInner {
     @include container;
     display: flex;
     justify-content: space-between;
 }
 
-.main-footer__bottom-text {
+.mainFooter__bottomText {
     margin: 0;
     font-family: $loraFont;
     font-size: 1rem;
