--- a/frontend/src/assets/sass/layouts/_header.scss
+++ b/frontend/src/assets/sass/layouts/_header.scss
@@ -23,7 +23,7 @@
     line-height: 22px;
 }
 
-.header__nav-list {
+.header__navList {
     display: flex;
 }
 
@@ -31,7 +31,7 @@
     list-style: none;
 }
 
-.header__nav-item-link {
+.header__navItemLink {
     padding: 10px 20px;
     color: #e5e5e5;
     text-decoration: none;
