--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -12,5 +12,7 @@
 @import './components/article/articleCategory';
 @import './components/article/mainArticle';
 @import './components/homepage/homeCategories';
+@import './components/comment/commentList';
+@import './components/comment/commentItem';
 
 @import './view/articleShow';
