--- a/frontend/src/assets/sass/components/article/_article.scss
+++ b/frontend/src/assets/sass/components/article/_article.scss
@@ -37,7 +37,7 @@
     position: relative;
 }
 
-.article__image-container {
+.article__imageContainer {
     position: relative;
     background-color: #000000;
 }
@@ -59,7 +59,7 @@
     }
 }
 
-.article__category-link {
+.article__categoryLink {
     background-color: rgba(255, 255, 255, 0.15);
     padding: 5px 10px;
     border-radius: 8px;
@@ -91,7 +91,7 @@
     bottom: 0;
 }
 
-.article__content--bottom-border-hidden {
+.article__content--bottomBorderHidden {
     border-bottom: none;
 }
 
@@ -132,7 +132,7 @@
     color: $logoColor;
 }
 
-.article__heading--fixed-width {
+.article__heading--fixedWidth {
     max-width: 270px;
 }
 
@@ -147,6 +147,6 @@
     color: $logoColor;
 }
 
-.article__text--fixed-width {
+.article__text--fixedWidth {
     max-width: 350px;
 }
