--- a/frontend/src/assets/sass/components/article/_mainArticle.scss
+++ b/frontend/src/assets/sass/components/article/_mainArticle.scss
@@ -1,10 +1,10 @@
-.main-article {
+.mainArticle {
     position: relative;
     width: 100%;
     height: 600px;
 }
 
-.main-article__bg {
+.mainArticle__bg {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -17,7 +17,7 @@
     }
 }
 
-.main-article__inner {
+.mainArticle__inner {
     @include container;
     color: $white;
     height: 100%;
@@ -34,12 +34,12 @@
     }
 }
 
-.main-article__inner--article-show {
+.mainArticle__inner--articleShow {
     align-items: center;
     text-align: center;
 }
 
-.main-article__heading {
+.mainArticle__heading {
     max-width: 600px;
     width: 100%;
     margin: 15px 0;
@@ -47,10 +47,18 @@
     font-weight: 700;
     font-size: 2.5rem;
     line-height: 46px;
-
 }
 
-.main-article__content {
+.mainArticle__headingLink {
+    color: $white;
+    text-decoration: none;
+    &:hover {
+        color: $white;
+        text-decoration: underline;
+    }
+}
+
+.mainArticle__content {
     display: flex;
     font-size: 0.875rem;
     font-family: $loraFont;
@@ -69,7 +77,7 @@
     }
 }
 
-.main-article__content-divider {
+.mainArticle__contentDivider {
     width: 30px;
     height: 0px;
     display: block;
@@ -81,7 +89,7 @@
     }
 }
 
-.main-article__author {
+.mainArticle__author {
     font-family: $loraFont;
     font-weight: 700;
     font-size: 0.875rem;
