(FE-Vue):General modal, inputs, and login modal

--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -14,5 +14,8 @@
 @import './components/homepage/homeCategories';
 @import './components/comment/commentList';
 @import './components/comment/commentItem';
+@import './components/general/modal';
+@import './components/general/input';
+@import './components/general/button';
 
 @import './view/articleShow';
