Implements the registration process

--- a/frontend/src/assets/sass/components/general/_input.scss
+++ b/frontend/src/assets/sass/components/general/_input.scss
@@ -1,18 +1,25 @@
 .input__group {
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .input__label {
-    color: #818181;
-    font-family: $loraFont;
-    font-size: 12px;
-    font-weight: 700;
+  color: #818181;
+  font-family: $loraFont;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 .input {
-    border: 1px solid #495057;
-    background-color: $white;
-    padding: 10px;
+  border: 1px solid #495057;
+  background-color: $white;
+  padding: 10px;
+}
+
+.input__error {
+  color: red;
+  font-family: $loraFont;
+  font-size: 12px;
+  font-style: normal;
 }
