--- a/frontend/src/assets/sass/components/general/_button.scss
+++ b/frontend/src/assets/sass/components/general/_button.scss
@@ -1,14 +1,43 @@
 .button {
-    background-color: #d4a373;
-    color: $white;
-    text-align: center;
-    padding: 10px;
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    transition: 0.5s;
+  background-color: #d4a373;
+  color: $white;
+  text-align: center;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  cursor: pointer;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    &:hover {
-        background-color: #c48f5f;
-    }
+  &:hover {
+    background-color: #c48f5f;
+  }
+}
+
+.button__loader {
+  display: inline-block;
+  width: 10px;
+  height: 14px;
+  margin-right: 15px;
+}
+.button__loader:after {
+  content: ' ';
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin: 0;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: button__loader 1.2s linear infinite;
+}
+@keyframes button__loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
