--- a/frontend/src/assets/sass/components/homepage/_homeCategories.scss
+++ b/frontend/src/assets/sass/components/homepage/_homeCategories.scss
@@ -1,52 +1,52 @@
 .section {
-    display: flex;
-    background-color: $logoColor;
-    padding: 45px 0;
+  display: flex;
+  background-color: $logoColor;
+  padding: 45px 0;
 }
 
 .section__inner {
-    @include container;
-    @include for-tablet-down {
-        padding: 0 2rem;
-    }
+  @include container;
+  @include for-tablet-down {
+    padding: 0 2rem;
+  }
 }
 
 .section__heading {
-    margin-top: 0px;
-    font-family: $loraFont;
-    font-weight: 700;
-    font-size: 2.5rem;
-    line-height: 46px;
+  margin-top: 0px;
+  font-family: $loraFont;
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 46px;
 }
 
 .section__categories {
-    @include unset;
-    display: flex;
-    gap: 20px;
+  @include unset;
+  display: flex;
+  gap: 20px;
 }
 
 .section__category {
-    @include unset;
+  @include unset;
 }
 
 .section__category--last {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .section__categoryLink {
-    font-family: $loraFont;
-    font-weight: 700;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    color: #495057;
-    text-decoration: none;
-    transition: .5s all;
+  font-family: $loraFont;
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  color: #495057;
+  text-decoration: none;
+  transition: 0.5s all;
 
-    &:hover {
-        color: $primaryColor;
-    }
+  &:hover {
+    color: $primaryColor;
+  }
 }
 
 .section__categoryLink--active {
-    color: $primaryColor;
+  color: $primaryColor;
 }
