(Vue-FE): Adds user profile and edit profile pages

--- a/frontend/src/assets/sass/base/_general.scss
+++ b/frontend/src/assets/sass/base/_general.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap');
 
 html {
-  background-color: #3e3e3e;
+  background-color: $bgColor;
   font-size: 14px;
 
   @include for-phone-only {
