--- a/frontend/src/assets/sass/components/comment/_commentList.scss
+++ b/frontend/src/assets/sass/components/comment/_commentList.scss
@@ -31,7 +31,7 @@
 
 .commentList__button {
   border-radius: 21px;
-  background-color: #d4a373;
+  background-color: $primaryColor;
   right: 30px;
   border: none;
   padding: 10px 20px;
