--- a/frontend/src/assets/sass/components/general/_button.scss
+++ b/frontend/src/assets/sass/components/general/_button.scss
@@ -1,5 +1,5 @@
 .button {
-  background-color: #d4a373;
+  background-color: $primaryColor;
   color: $white;
   text-align: center;
   padding: 10px;
