--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -10,11 +10,16 @@
 @import './components/article/articleAuthor';
 @import './components/article/articleCategory';
 @import './components/article/mainArticle';
+
 @import './components/homepage/homeCategories';
+
 @import './components/comment/commentList';
 @import './components/comment/commentItem';
+
 @import './components/general/modal';
 @import './components/general/input';
 @import './components/general/button';
+
+@import './components/profile/profileBoard';
 
 @import './view/articleShow';
