(Vue-FE): Adds pinia for state management of user, modal and error state changes

--- a/frontend/src/assets/sass/components/homepage/_homeCategories.scss
+++ b/frontend/src/assets/sass/components/homepage/_homeCategories.scss
@@ -20,6 +20,10 @@
   margin-bottom: 20px;
 }
 
+.section__heading--centered {
+  text-align: center;
+}
+
 .section__categories {
   @include unset;
   display: flex;
