--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -21,5 +21,6 @@
 @import './components/general/button';
 
 @import './components/profile/profileBoard';
+@import './components/profile/editProfile';
 
 @import './view/articleShow';
