Adding endpoints and functionalities for the notifications API

--- a/frontend/src/assets/sass/components/category/_categoryList.scss
+++ b/frontend/src/assets/sass/components/category/_categoryList.scss
@@ -53,6 +53,7 @@
   color: #495057;
   text-decoration: none;
   transition: 0.5s all;
+  text-transform: capitalize;
 
   &:hover {
     color: $primaryColor;
