--- a/frontend/src/assets/sass/components/profile/_profileBoard.scss
+++ b/frontend/src/assets/sass/components/profile/_profileBoard.scss
@@ -40,6 +40,21 @@
   cursor: pointer;
 }
 
+.coverPhoto {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  border: 1px solid black;
+  overflow: hidden;
+}
+
+.coverPhoto__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
 .profileInfo {
   margin-top: 25px;
   display: flex;
