feat(notifications): add notifications icon

--- a/frontend/src/assets/sass/style.scss
+++ b/frontend/src/assets/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import './layouts/header';
 @import './layouts/footer';
+@import './layouts/notifications';
 
 @import './components/article/article';
 @import './components/article/articleAuthor';
