feat(notifications): add backend data

--- a/frontend/src/assets/sass/components/category/_categoryList.scss
+++ b/frontend/src/assets/sass/components/category/_categoryList.scss
@@ -118,3 +118,12 @@
     color: $primaryColor;
   }
 }
+
+.section__button-wrapper {
+  max-width: 300px;
+  width: 100%;
+}
+
+.section__button-follow {
+  margin-top: 30px;
+}
