--- a/frontend/src/assets/sass/components/category/_categoryList.scss
+++ b/frontend/src/assets/sass/components/category/_categoryList.scss
@@ -71,15 +71,16 @@
   max-width: 500px;
   width: 100%;
   margin: 0 auto 25px;
-  padding: 30px;
-  border-top: 2px solid #d4a373;
-  border-bottom: 2px solid #d4a373;
+  padding: 20px;
+  border-top: 1px solid #d4a373;
+  border-bottom: 1px solid #d4a373;
 }
 
 .section__info-item {
   cursor: pointer;
   font-weight: 700;
   font-size: 1.5rem;
+  font-family: $loraFont;
 }
 
 .section__followers-container {
@@ -96,9 +97,10 @@
   text-decoration: none;
   padding: 10px;
   transition: 0.7s;
+  border-radius: 5px;
 
   &:hover {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 6px;
   }
 }
 
@@ -113,6 +115,7 @@
   font-weight: 700;
   color: black;
   transition: 0.8s;
+  font-family: $loraFont;
 
   &:hover {
     color: $primaryColor;
@@ -120,8 +123,7 @@
 }
 
 .section__button-wrapper {
-  max-width: 300px;
-  width: 100%;
+  width: max-content;
 }
 
 .section__button-follow {
